; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_aclchk.c_aclcheck_error_col.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_aclchk.c_aclcheck_error_col.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_INSUFFICIENT_PRIVILEGE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"permission denied for column \22%s\22 of relation \22%s\22\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"unrecognized AclResult: %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @aclcheck_error_col(i32 %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* %5, align 4
  switch i32 %9, label %24 [
    i32 128, label %10
    i32 129, label %11
    i32 130, label %19
  ]

10:                                               ; preds = %4
  br label %28

11:                                               ; preds = %4
  %12 = load i32, i32* @ERROR, align 4
  %13 = load i32, i32* @ERRCODE_INSUFFICIENT_PRIVILEGE, align 4
  %14 = call i32 @errcode(i32 %13)
  %15 = load i8*, i8** %8, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = call i32 @errmsg(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i8* %15, i8* %16)
  %18 = call i32 @ereport(i32 %12, i32 %17)
  br label %28

19:                                               ; preds = %4
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %6, align 4
  %22 = load i8*, i8** %7, align 8
  %23 = call i32 @aclcheck_error(i32 %20, i32 %21, i8* %22)
  br label %28

24:                                               ; preds = %4
  %25 = load i32, i32* @ERROR, align 4
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @elog(i32 %25, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %26)
  br label %28

28:                                               ; preds = %24, %19, %11, %10
  ret void
}

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i8*, i8*) #1

declare dso_local i32 @aclcheck_error(i32, i32, i8*) #1

declare dso_local i32 @elog(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
